--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Interactive Gamelan — Two-Row (C→C with Sharps)</title>
-  <meta name="description" content="Two-row gamelan with naturals C→C and sharps in-between. Ultra-low latency." />
+  <title>Interactive Gulintangan - by Ghani Ahmad</title>
+  <meta name="description" content="Bruneian Gulintangan" />
   <style>
     :root{
       --brand:#0ea5e9; --ink:#0f172a; --muted:#64748b; --bg:#f6f7fb;
