--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </style>
 </head>
 <body>
-  <header><h1>Interactive Gamelan — Ultra Fast • Polyphonic</h1></header>
+  <header><h1>Gulintangan Interaktif G-Haz Brunei</h1></header>
   <main>
     <div id="frame" aria-label="Gamelan two-row frame">
       <button class="pad s-Cs4" data-note="C#4" aria-label="C sharp"></button>
@@ -49,9 +49,9 @@
       <button class="pad n-B4" data-note="B4" aria-label="B"></button>
       <button class="pad n-C5" data-note="C5" aria-label="High C"></button>
     </div>
-    <div id="status" class="status">Tap once to enable sound. Multi-touch & chords supported.</div>
+    <div id="status" class="status">Boleh dipukul dengan sekali atau serentak</div>
   </main>
   <script type="module" src="./main.js"></script>
-  <footer><p>© 2025 • Built for learning</p></footer>
+  <footer><p>© 2025 • Built for learning purposes by Ghani Ahmad </p></footer>
 </body>
 </html>
